Criado documentação swagger de reminders
